# AiEDA-models

./: README.md
AiMacroPlacement/AiMP/: .gitignore  .gitmodules  CMakeLists.txt  README.en.md  README.md
AiMacroPlacement/AiMP/AutoDMP/: .gitignore  test.sh  test_XS_TOP.sh  test_ariane133.sh
AiMacroPlacement/AiMP/AutoDMP/dreamplace/: Placer.py  configure.py  params2.json
AiMacroPlacement/AiMP/AutoDMP/tuner/: find_free_port.py  ppa.json  run_tuner_train.py  tuner_train.json
AiMacroPlacement/AiMP/analyses/: analysis.py
AiMacroPlacement/AiMP/backend/: backend_flow_innovus.py
AiMacroPlacement/AiMP/benchmark/: README.md  run_aimp.py  run_analyses.py  run_backend_innovus.py  run_create_workspace.py  run_feature.py
AiMacroPlacement/AiMP/data_manager/: aimp_dm.py
AiMacroPlacement/AiMP/data_manager/config/: config.py
AiMacroPlacement/AiMP/data_manager/path/: aimp_path.py
AiMacroPlacement/AiMP/data_manager/workspace/: workspace_create.py
AiMacroPlacement/AiMP/dataset/: aimp_feature.py  aimp_pr.py  create_data_workspace.py  run_task_parallel.py
AiMacroPlacement/AiMP/macro_placer/: .gitignore  README.md  __init__.py  flow.py  macroPlaceIO.py  macroPlaceInterface.py  macroPlacer.py  macro_placer.py  main.py
AiMacroPlacement/AiMP/macro_placer/config/: clustering.py  macroConfig.py
AiMacroPlacement/AiMP/macro_placer/database/: macroPlaceDB.py
AiMacroPlacement/AiMP/macro_placer/evaluator/: evaluator.py
AiMacroPlacement/AiMP/tasks/: aimp_task.py  backend_task.py  feature_task.py  task_manager.py
AiMacroPlacement/AiMP/workspace_example/: task.json
(+199 files in other folders)
